# terminusdb-10-to-11

./: Cargo.toml  LICENSE  README.md  REAMDE.md
.github/workflows/: rust.yml
src/: consts.rs  convert_dict.rs  convert_layer.rs  convert_store.rs  convert_triples.rs  dataconversion.rs  lib.rs  main.rs  reachable.rs
test/: everything-schema.json  everything.json
tests/: rollup.rs
