[package]
name = "terminusdb-10-to-11"
version = "0.1.0"
edition = "2021"
authors = ["Gavin Mendel-Gleasson <gavin@terminusdb.com>", "Matthijs van Otterdijk <matthijs@terminusdb.com>"]
description = "Converts a terminusdb v10 store to a v11 store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#terminus-store_10 = {package = "terminus-store", version = "0.19.9"}
terminus-store_10 = {package = "terminus-store", path="../terminus-store-10"}
terminus-store_11 = {package = "terminus-store", path="../terminusdb-store"}
clap = {version="4.0", features=["derive"]}
fs2 = "0.4.3"
futures = "0.3"
tokio = {version = "1.0", features = ["full"]}
tokio-util = {version = "0.6", features = ["codec"]}
itertools = "0.10"
rug = {version="1.16", default-features=false, features=["integer","rational"]}
chrono = "0.4"
bytes = "1.0"
byteorder = "1.4"
base64 = "0.13"
hex = "0.4"