[package]
name = "terminusdb-10-to-11"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Gavin Mendel-Gleason <gavin@terminusdb.com>", "Matthijs van Otterdijk <matthijs@terminusdb.com>", "Robin de Rooij <robin@terminusdb.com>"]
description = "Converts a terminusdb v10 store to a v11 store"
repository = "https://github.com/terminusdb/terminusdb-10-to-11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#terminus-store_10 = {package = "terminus-store", path="../terminusdb-store-10"}
terminus-store_10 = {package = "terminus-store", version = "0.19.11"}
terminus-store_11 = {package = "terminus-store", version="0.20.0-rc4"}
clap = {version="4.0", features=["derive"]}
fs2 = "0.4.3"
futures = "0.3"
tokio = {version = "1.0", features = ["full"]}
tokio-util = {version = "0.6", features = ["codec"]}
itertools = "0.10"
rug = {version="1.16", default-features=false, features=["integer","rational"]}
chrono = "0.4"
bytes = "1.0"
byteorder = "1.4"
base64 = "0.13"
hex = "0.4"
serde = {version="1.0", features=["derive"]}
regex = "1.7"
lazy_static = "1.4"
thiserror = "1.0"
postcard = {version="1.0", features=["alloc"]}